--- a/Homework2/style.css
+++ b/Homework2/style.css
@@ -1,8 +1,5 @@
 /* :root {
   font-size: 13px;
-
-
-  fdfff
 } */
 
 body {
@@ -44,6 +41,7 @@ section {
     display: grid;
     grid-template-columns: 100px 150px;
     grid-template-rows: auto;
+    position: relative;
 }
 
 .contentSecond {
@@ -60,11 +58,19 @@ section {
     margin: 0px 30px 30px 30px;
 }
 
-img {
+.img-profile {
     border-radius: 50px;
     width: 50px;
     height: 50px;
     margin: 0;
+}
+
+.img-mark {
+    position: absolute;
+    top: 0px;
+    right: 80px;
+    width: 130px;
+    height: 140px;
 }
 
 h2 {
@@ -93,9 +99,8 @@ h4 {
 [id="section1"] {
     background-color: hsl(263, 55%, 52%);
     grid-column: 1 / 3;
-    /* Elementul se întinde pe prima și a doua coloană */
     grid-row: 1;
-    /* Elementul se află pe prima linie */
+    grid-template-columns: 100px 150px auto;
 }
 
 [class="colorTitle"] h2 {
@@ -114,6 +119,7 @@ h4 {
     color: hsl(0, 0%, 100%);
     font-family: 'Barlow Semi Condensed', sans-serif;
     margin: 0px 0px 20px 0px;
+    position: relative;
 }
 
 .colorBlackParagraph {
@@ -138,6 +144,7 @@ h4 {
     color: hsl(0, 0%, 100%, 0.7);
     font-size: 0.83rem;
     margin: 0px;
+    position: relative;
 }
 
 .colorOpacityParagraphSecond {
@@ -152,9 +159,7 @@ h4 {
 [id="section3"] {
     background-color: hsl(0, 0%, 100%);
     grid-column: 1 / 2;
-    /* Elementul ocupă doar prima coloană */
     grid-row: 2;
-    /* Elementul se află pe a doua linie */
 }
 
 [id="section4"] {
