--- a/Homework2/style.css
+++ b/Homework2/style.css
@@ -1,13 +1,24 @@
 /* :root {
   font-size: 13px;
+  --base-color: #ff00ff;
 } */
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
-    background-color: hsl(210, 46%, 95%);
+    background-color: var(--base-color, hsl(210, 46%, 95%));
     font-size: 0.8125rem;
     display: grid;
     place-items: center;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -63,6 +74,7 @@ section {
     width: 50px;
     height: 50px;
     margin: 0;
+    position: relative;
 }
 
 .img-mark {
@@ -78,6 +90,7 @@ h2 {
     grid-row: 1;
     align-self: end;
     margin: 0px;
+    position: relative;
 }
 
 h4 {
@@ -85,6 +98,7 @@ h4 {
     grid-row: 2;
     align-self: start;
     margin: 0px;
+    position: relative;
 }
 
 .attribution {
@@ -97,7 +111,7 @@ h4 {
 }
 
 [id="section1"] {
-    background-color: hsl(263, 55%, 52%);
+    background-color: var(--base-color, hsl(263, 55%, 52%));
     grid-column: 1 / 3;
     grid-row: 1;
     grid-template-columns: 100px 150px auto;
@@ -153,23 +167,48 @@ h4 {
 }
 
 [id="section2"] {
-    background-color: hsl(217, 19%, 35%);
+    background-color: var(--base-color, hsl(217, 19%, 35%));
 }
 
 [id="section3"] {
-    background-color: hsl(0, 0%, 100%);
+    background-color: var(--base-color, hsl(0, 0%, 100%));
     grid-column: 1 / 2;
     grid-row: 2;
 }
 
 [id="section4"] {
-    background-color: hsl(219, 29%, 14%);
+    background-color: var(--base-color, hsl(219, 29%, 14%));
     grid-column: 2 / 4;
     grid-row: 2;
 }
 
 [id="section5"] {
-    background-color: hsl(0, 0%, 100%);
+    background-color: var(--base-color, hsl(0, 0%, 100%));
     grid-column: 4;
     grid-row: 1 / 3;
+}
+
+/* Extra small devices (phones, 600px and down) */ 
+@media only screen and (max-width: 600px) {
+   
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+   
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    
 }
