--- a/Homework3/style.css
+++ b/Homework3/style.css
@@ -1,8 +1,133 @@
- .attribution {
-     font-size: 11px;
-     text-align: center;
- }
+/* :root {
+  font-size: 13px;
+  --base-color: #ff00ff;
+} */
 
- .attribution a {
-     color: hsl(228, 45%, 44%);
- }
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+.navLeft {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.navTxt {
+    font-weight: bold;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+}
+
+#sectionNav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.buttonNav a {
+    color: hsl(321, 100%, 78%);
+    text-decoration: none;
+    border: 1px solid hsl(321, 100%, 78%);
+    border-radius: 15px;
+    padding: 5px 15px;
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.buttonNav {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+#sectionTitle {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#sectionTitle a {
+    background-color: var(--base-color, hsl(322, 100%, 66%));
+    color: white;
+    text-decoration: none;
+    border: 1px solid hsl(322, 100%, 66%);
+    border-radius: 50px;
+    padding: 8px;
+    width: 250px;
+    text-align: center;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.title p {
+    text-align: center;
+    margin: 0% auto;
+    width: 410px;
+}
+
+.title h1 {
+    text-align: center;
+    margin: 0px 0px 20px 0px;
+    font-size: 2.5rem;
+}
+
+#sectionScreen {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.imgScreen {
+    width: 800px;
+    height: 600px;
+    margin-top: 60px;
+}
+
+article {
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+    justify-content: space-between;
+    width: 700px;
+    text-align: center;
+}
+
+.article1 img,
+.article2 img {
+    width: 30px;
+    display: flex;
+    justify-content: start;
+}
+
+.article1 h1,
+.article2 h1 {
+    font-size: 60px;
+    margin: 0px;
+}
+
+
+
