--- a/Homework3/style.css
+++ b/Homework3/style.css
@@ -13,6 +13,13 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    color: hsl(192, 100%, 9%);
+    background-color: aqua;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -22,23 +29,33 @@ html {
     color: hsl(228, 45%, 44%);
 }
 
-.navLeft {
+.logo {
     display: flex;
     justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+    margin: 5px 5px;
 }
 
-.navTxt {
+.logoTxt {
     font-weight: bold;
     justify-content: center;
     align-content: center;
     display: flex;
     flex-wrap: wrap;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
+    margin: 0px 5px;
+}
+
+.logo img {
+    width: 50px;
+    height: 50px;
 }
 
 #sectionNav {
     display: flex;
     justify-content: space-between;
+    margin: 50px 30px;
 }
 
 .buttonNav a {
@@ -47,7 +64,6 @@ html {
     border: 1px solid hsl(321, 100%, 78%);
     border-radius: 15px;
     padding: 5px 15px;
-    margin-right: 30px;
     cursor: pointer;
 }
 
@@ -65,6 +81,16 @@ html {
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-top: 170px;
+}
+
+#section4 {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 #sectionTitle a {
@@ -76,20 +102,34 @@ html {
     padding: 8px;
     width: 250px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 40px;
+    cursor: pointer;
+}
+
+#section4 a {
+    background-color: var(--base-color, hsl(322, 100%, 66%));
+    color: white;
+    text-decoration: none;
+    border: 1px solid hsl(322, 100%, 66%);
+    border-radius: 50px;
+    padding: 8px;
+    width: 250px;
+    text-align: center;
     cursor: pointer;
 }
 
 .title p {
     text-align: center;
     margin: 0% auto;
-    width: 410px;
+    width: 510px;
+    color: hsl(192, 100%, 9%, 80%);
 }
 
 .title h1 {
     text-align: center;
     margin: 0px 0px 20px 0px;
-    font-size: 2.5rem;
+    font-size: 3.2rem;
+    font-family: 'Poppins', sans-serif;
 }
 
 #sectionScreen {
@@ -104,13 +144,14 @@ html {
 .imgScreen {
     width: 800px;
     height: 600px;
-    margin-top: 60px;
+    margin-top: 80px;
+    object-fit: cover;
 }
 
 article {
     display: flex;
     flex-direction: row;
-    margin-top: 60px;
+    margin-top: 100px;
     justify-content: space-between;
     width: 700px;
     text-align: center;
@@ -129,5 +170,217 @@ article {
     margin: 0px;
 }
 
+.article1 p,
+.article2 p {
+    color: hsl(192, 100%, 9%, 60%);
+}
 
+.article3,
+.article4,
+.article5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: absolute;
+    width: 450px;
+    height: 300px;
+    margin: auto;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-80%, -70%);
+}
 
+.article3 img,
+.article4 img,
+.article5 img {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+.article3Txt,
+.article5Txt {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-right: 200px;
+}
+
+.article4Txt {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 200px;
+}
+
+.article3Txt p,
+.article4Txt p, 
+.article5Txt p{
+    margin-bottom: 0px;
+    width: 550px;
+}
+
+.article3Txt h1,
+.article4Txt h1,
+.article5Txt h1 {
+    font-size: 2.6rem;
+    margin-bottom: 0px;
+}
+
+#section1,
+#section2,
+#section3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.imgSection1 {
+    font-size: 0px;
+    margin-top: 50px;
+    position: relative;
+}
+
+.imgSection1 img,
+.imgSection3 img {
+    max-width: 100%;
+    height: 500px;
+}
+
+.article3 article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 450px;
+    height: 400px;
+    margin: auto;
+    align-items: center;
+}
+
+.article4 article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 450px;
+    height: 400px;
+    margin-top: 600px;
+    align-items: center;
+}
+
+.article5 article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 450px;
+    height: 400px;
+    align-items: center;
+}
+
+.imgSection3 {
+    font-size: 0px;
+    margin-top: 300px;
+    position: relative;
+    width: 90rem;
+}
+
+.imgAside {
+    margin-top: 50px;
+    position: relative;
+}
+
+#section5 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: absolute;
+    margin: auto;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    top: 50%;
+    width: 100%;
+    margin: 5px 20px;
+}
+
+#aside {
+    position: relative;
+    color: white;
+    width: 100%;
+}
+
+#subscribeButton {
+    background-color: var(--base-color, hsl(322, 100%, 66%));
+    border-color: hsl(322, 100%, 66%);
+    color: white;
+    padding: 10px 35px;
+    border-radius: 8px;
+    margin: 0px 20px;
+    cursor: pointer;
+}
+
+#subscribe {
+    border-radius: 8px;
+    padding: 10px 35px;
+    cursor: pointer;
+}
+
+.asideRight h1 {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+}
+
+.contacts img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+.contactPhone,
+.contactEmail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 5px 5px;
+}
+
+.contactPhone p,
+.contactEmail p {
+    margin: 0px;
+}
+
+form {
+    margin: 30px 5px;
+}
+
+.asideLeft {
+    width: 400px;
+}
+
+.asideRight {
+    width: 410px;
+}
+
+.contactIcons {
+    display: flex;
+    flex-direction: row;
+}
+
+.contactIcons i {
+    width: 60px;
+    font-size: 40px;
+    margin-top: 70px;
+}
+
+.logo img {
+    filter: brightness(0) invert(1);
+}
