--- a/Homework1/style.css
+++ b/Homework1/style.css
@@ -234,7 +234,8 @@ textarea:focus {
     border: none;
 }
 
-.plus {
+.plus,
+.edit {
     margin-top: 5px;
     height: 25px;
     width: 25px;
@@ -246,7 +247,8 @@ textarea:focus {
 }
 
 .plus:hover,
-.trash:hover {
+.trash:hover,
+.edit:hover {
     opacity: 0.7;
 }
 
@@ -278,7 +280,7 @@ div.second {
     margin-left: 3%;
     margin-top: 10px;
     height: 20px;
-    width: 220px;
+    width: 190px;
     overflow-x: hidden;
     word-wrap: break-word;
     overflow-y: auto;
